--- a/BTL-nhom-14/src/GDF/Draw.fxml
+++ b/BTL-nhom-14/src/GDF/Draw.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.CheckBox?>
@@ -26,7 +25,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" styleClass="parent" stylesheets="@design.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nhom14.DrawSceneController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" styleClass="parent" stylesheets="@design.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GDF.DrawSceneController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" styleClass="main-pane" stylesheets="@design.css" VBox.vgrow="ALWAYS">
          <effect>
@@ -39,10 +38,10 @@
          <children>
             <AnchorPane prefHeight="382.0" prefWidth="530.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Pane fx:id="displayPane" layoutX="-19.0" layoutY="1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMousePressed="#onGraphPressed" prefHeight="623.0" prefWidth="1200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="-19.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="1.0" />
-                  <VBox alignment="CENTER" layoutX="13.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="displayPane" layoutY="1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMousePressed="#onGraphPressed" prefHeight="623.0" prefWidth="1181.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <VBox alignment="CENTER" layoutX="13.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="349.0" prefWidth="54.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="50.0" styleClass="popup-bar">
+                        <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="54.0" styleClass="popup-bar">
                            <effect>
                               <DropShadow height="50.0" radius="24.5" width="50.0">
                                  <color>
@@ -54,45 +53,33 @@
                               <Cursor fx:constant="DEFAULT" />
                            </cursor>
                            <children>
-                              <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="50.0">
-                                 <children>
-                                    <ToggleButtonGroup maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="50.0" rotate="90.0" selectionType="SINGLE">
-                                       <toggles>
-                                          <ToggleButton fx:id="addVertex" minWidth="50.0" mnemonicParsing="false" onAction="#toggleAddVertex" prefHeight="50.0" prefWidth="50.0">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../icon/AddVertices.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </ToggleButton>
-                                          <ToggleButton fx:id="addEdge" minWidth="50.0" mnemonicParsing="false" onAction="#toggleAddEdge" prefHeight="50.0" prefWidth="50.0">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../icon/AddEdge.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </ToggleButton>
-                                          <ToggleButton fx:id="Movable" minWidth="50.0" mnemonicParsing="false" onAction="#toggleMovable" prefHeight="50.0" prefWidth="50.0">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../icon/Move.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </ToggleButton>
-                                       </toggles>
-                                       <VBox.margin>
-                                          <Insets right="45.0" />
-                                       </VBox.margin>
-                                    </ToggleButtonGroup>
-                                 </children>
-                              </VBox>
-                              <HBox alignment="CENTER" onMouseClicked="#delete" prefHeight="50.0" prefWidth="200.0" styleClass="cards">
+                              <ToggleButton fx:id="addVertex" maxHeight="54.0" maxWidth="54.0" minHeight="54.0" minWidth="54.0" mnemonicParsing="false" onAction="#toggleAddVertex" prefHeight="54.0" prefWidth="54.0">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../icon/AddVertices.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></ToggleButton>
+                              <ToggleButton fx:id="addEdge" layoutX="10.0" layoutY="10.0" maxHeight="54.0" maxWidth="54.0" minHeight="54.0" minWidth="54.0" mnemonicParsing="false" onAction="#toggleAddEdge" prefHeight="54.0" prefWidth="54.0">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../icon/AddEdge.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </ToggleButton>
+                              <ToggleButton fx:id="Movable" layoutX="10.0" layoutY="172.0" maxHeight="54.0" maxWidth="54.0" minHeight="54.0" minWidth="54.0" mnemonicParsing="false" onAction="#toggleMovable" prefHeight="54.0" prefWidth="54.0">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../icon/Move.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </ToggleButton>
+                              <HBox fx:id="delete" alignment="CENTER" layoutX="10.0" layoutY="110.0" maxHeight="54.0" maxWidth="54.0" minHeight="54.0" minWidth="54.0" onMouseClicked="#delete" prefHeight="54.0" prefWidth="54.0" styleClass="cards">
                                  <children>
                                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -104,19 +91,7 @@
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
                               </HBox>
-                              <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" styleClass="cards">
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor>
-                                 <children>
-                                    <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../icon/Reload.png" />
-                                       </image>
-                                    </ImageView>
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER" onMouseClicked="#hidePropertyBar" prefHeight="50.0" prefWidth="200.0" styleClass="cards">
+                              <HBox fx:id="hideProperty" alignment="CENTER" layoutX="10.0" layoutY="160.0" maxHeight="54.0" maxWidth="54.0" minHeight="54.0" minWidth="54.0" onMouseClicked="#hidePropertyBar" prefHeight="54.0" prefWidth="54.0" styleClass="cards">
                                  <children>
                                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -145,16 +120,16 @@
                            <children>
                               <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="160.0">
                                  <children>
-                                    <ChoiceBox fx:id="Algorithm" prefHeight="50.0" prefWidth="234.0" HBox.hgrow="ALWAYS">
+                                    <ChoiceBox fx:id="Algorithm" onMouseClicked="#setOption" prefHeight="50.0" prefWidth="234.0" HBox.hgrow="ALWAYS">
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
                                        </cursor>
                                     </ChoiceBox>
                                  </children>
                               </HBox>
-                              <HBox prefHeight="50.0" prefWidth="81.0" HBox.hgrow="ALWAYS">
+                              <HBox prefHeight="50.0" prefWidth="15.0" HBox.hgrow="ALWAYS">
                                  <children>
-                                    <Label alignment="CENTER" text="From" textAlignment="CENTER" textFill="WHITE">
+                                    <Label alignment="CENTER" prefHeight="23.0" prefWidth="58.0" text="From" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="Lato Thin" size="18.0" />
                                        </font>
@@ -165,42 +140,45 @@
                                           <Insets left="5.0" right="5.0" />
                                        </padding>
                                     </Label>
-                                    <ChoiceBox fx:id="startPoint" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" prefWidth="83.0" HBox.hgrow="ALWAYS">
+                                    <ChoiceBox fx:id="startPoint" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" prefWidth="66.0" HBox.hgrow="ALWAYS">
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
                                        </cursor>
                                     </ChoiceBox>
                                  </children>
                               </HBox>
-                              <HBox alignment="CENTER" onMouseClicked="#run" prefHeight="50.0" prefWidth="0.0" styleClass="cards" HBox.hgrow="ALWAYS">
-                                 <cursor>
-                                    <Cursor fx:constant="HAND" />
-                                 </cursor>
+                              <HBox layoutX="170.0" layoutY="10.0" prefHeight="50.0" prefWidth="80.0">
                                  <children>
-                                    <ToggleButtonGroup minWidth="-Infinity" prefHeight="50.0" prefWidth="95.0" selectionType="SINGLE" styleClass="toggle-group" HBox.hgrow="ALWAYS">
-                                        <toggles>
-                                            <ToggleButton fx:id="run" onAction="#run" prefHeight="50.0" prefWidth="75.0">
-                                             <graphic>
-                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../icon/Run.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                            </ToggleButton>
-                                            <ToggleButton fx:id="pause" onAction="#pause" prefWidth="73.0">
-                                             <graphic>
-                                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../icon/Pause.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                            </ToggleButton>
-                                        </toggles>
-                                    </ToggleButtonGroup>
+                                    <Label alignment="CENTER" text="To" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="Lato Thin" size="18.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets top="13.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets left="5.0" right="5.0" />
+                                       </padding>
+                                    </Label>
+                                    <ChoiceBox fx:id="endPoint" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" prefWidth="49.0" HBox.hgrow="ALWAYS">
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor>
+                                    </ChoiceBox>
                                  </children>
                               </HBox>
+                                <ToggleButton fx:id="run" maxHeight="50.0" maxWidth="75.0" minHeight="50.0" minWidth="75.0" onAction="#run" prefHeight="50.0" prefWidth="75.0" HBox.hgrow="ALWAYS">
+                                 <graphic>
+                                    <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../icon/Run.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                                </ToggleButton>
                               <HBox fx:id="stop" alignment="CENTER" layoutX="504.0" layoutY="10.0" onMouseClicked="#stop" prefHeight="100.0" prefWidth="5.0" styleClass="cards" HBox.hgrow="ALWAYS">
                                  <children>
                                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
@@ -323,7 +301,7 @@
                               <items>
                                 <MenuItem mnemonicParsing="false" text="Zoom In" />
                                     <MenuItem mnemonicParsing="false" text="Zoom Out" />
-                                    <CheckMenuItem mnemonicParsing="false" text="Property" />
+                                    <CheckMenuItem mnemonicParsing="false" onAction="#hidePropertyBar" selected="true" text="Property" />
                                     <CheckMenuItem mnemonicParsing="false" text="Log" />
                               </items>
                             </Menu>
@@ -335,7 +313,7 @@
                               </Menu>
                               <Menu mnemonicParsing="false" style="-fx-background-color: #282b3c;" text="Help">
                                  <items>
-                                    <MenuItem mnemonicParsing="false" text="About" />
+                                    <MenuItem fx:id="menu_about" mnemonicParsing="false" onAction="#toHelpAndAbout" text="About" />
                                  </items>
                               </Menu>
                           </menus>
