--- a/BTL-nhom-14/bin/GDF/About.fxml
+++ b/BTL-nhom-14/bin/GDF/About.fxml
@@ -16,7 +16,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="392.0" prefWidth="308.0">
                      <children>
-                        <TextArea fx:id="helpTextArea" editable="false" prefHeight="376.0" prefWidth="955.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="60.0" />
+                        <TextArea fx:id="helpTextArea" editable="false" prefHeight="376.0" prefWidth="955.0" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="60.0" />
                         <Label layoutX="321.0" layoutY="32.0" text="Documentation" textAlignment="CENTER" textFill="WHITE">
                            <font>
                               <Font name="Lato Black" size="50.0" />
@@ -34,7 +34,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="542.0" prefWidth="1043.0">
                      <children>
-                        <TextArea fx:id="aboutTextArea" editable="false" layoutY="139.0" prefHeight="344.0" prefWidth="955.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="60.0" />
+                        <TextArea fx:id="aboutTextArea" editable="false" layoutY="139.0" prefHeight="344.0" prefWidth="955.0" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="60.0" />
                         <Label layoutX="292.0" layoutY="38.0" text="Graph Path Finder" textAlignment="CENTER" textFill="WHITE">
                            <font>
                               <Font name="Lato Black" size="50.0" />
